add jdk > 11 fixes in build