@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 buildscript {
     repositories {
         mavenLocal()
@@ -167,6 +169,28 @@ mainClassName = 'org.grobid.service.GrobidSuperconductorsApplication'
 
 run {
     args = ['server', 'resources/config/config.yml']
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+            "${file("../grobid-home/lib/lin-64").absolutePath}:"
+    } else  {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    }
+    workingDir = rootProject.rootDir
+    def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
+
+    systemProperty "java.library.path", javaLibraryPath
 }
 
 task integration(type: Test) {
